// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`includes the options given to it 1`] = `
<select
  onChange={[Function]}
  value={undefined}
>
  <option
    label="apple"
    style={undefined}
    value="apple"
  />
  <option
    label="peppermint"
    style={undefined}
    value="peppermint"
  />
  <option
    label="banana"
    style={undefined}
    value="banana"
  />
  <option
    label="cinnamon"
    style={undefined}
    value="cinnamon"
  />
  <option
    label="cherry"
    style={undefined}
    value="cherry"
  />
</select>
`;

exports[`styles includes the passed styles 1`] = `
<select
  onChange={[Function]}
  value={undefined}
>
  <option
    label="apple"
    style={
      Object {
        "background": "red",
      }
    }
    value="apple"
  />
  <option
    label="banana"
    style={undefined}
    value="banana"
  />
</select>
`;

exports[`styles it works with empty styles 1`] = `
<select
  onChange={[Function]}
  value={undefined}
>
  <option
    label="apple"
    style={undefined}
    value="apple"
  />
</select>
`;

exports[`styles it works with unused styles 1`] = `
<select
  onChange={[Function]}
  value={undefined}
>
  <option
    label="apple"
    style={undefined}
    value="apple"
  />
</select>
`;

exports[`styles it works without any styles 1`] = `
<select
  onChange={[Function]}
  value={undefined}
>
  <option
    label="apple"
    style={undefined}
    value="apple"
  />
</select>
`;

exports[`uses the passed in value if present 1`] = `
<select
  onChange={[Function]}
  value="b"
>
  <option
    label="a"
    style={undefined}
    value="a"
  />
  <option
    label="p"
    style={undefined}
    value="p"
  />
  <option
    label="b"
    style={undefined}
    value="b"
  />
  <option
    label="c"
    style={undefined}
    value="c"
  />
</select>
`;
